# AtlasTranslate

./: .gitignore  CMakeLists.txt  README.md  README.rst
.github/workflows/: ci.yml
src/: Makefile  atlastranslate.cpp  common.h
src/Shared/: Shrink.h
src/shared/: Shrink.h
